Implemented changes to make multiple EGs active